# snf

./: .gitignore  README.md  requirements.txt  setup.cfg
snftools/snf/: __init__.py  robust_core_clustering.py  snf.py
snftools/tools/: __init__.py  basic_workflow.py
snftools/utils/: __init__.py  utils.py
tests/: test_add_cooccurrences_to_matrix.py  test_make_affinity_matrix.py  test_snf.py  test_solution.py  test_solutions.py
tests/_make_affinity_matrices/: README.md  create_csv.R
