[metadata]
name = snftools
version = 0.1.0
author = Lyndon Boone
author_email = lyndonboone8@gmail.com
description = Adaptation of SNF to Python
long_description = file: README.md
long_description_content_type = text/markdown
keywords = snf
license = Apache License 2.0
license_files = LICENSE
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Processing
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    matplotlib==3.7.1
    networkx==3.1
    numpy==1.25.0
    pandas==1.5.3
    scikit_learn==1.2.2
    scipy==1.10.1
    seaborn==0.12.2
    snfpy==0.2.2

[options.extras_require]
dev =
    black

[options.package_data]
* = README.md
